--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header {
 	font-size: 30px;
 }
 
-a {
+header a {
   text-decoration: none;
   color: #000;
 }
@@ -159,18 +159,13 @@ a {
   top: 8px;
 }
 
-.menu-wrap .toggler:checked + .hamburger > div {
-  transform: rotate(360deg);
-}
-
 .menu-wrap .toggler:checked + .hamburger > div:before,
 .menu-wrap .toggler:checked + .hamburger > div:after {
   top: 0;
-  transform: rotate(90deg);
 }
 
 .menu-wrap .toggler:checked:hover + .hamburger > div {
-  transform: rotate(270deg);
+  transform: scale(1.5);
 }
 
 .menu-wrap .toggler:checked ~ .menu {
@@ -312,6 +307,7 @@ a {
 .blok1 p {
   font-family: HelveticaNeueMedium;
   font-size: 16px;
+  color: #2a2a2a;
 }
 
 .viewproducts {
@@ -322,7 +318,7 @@ a {
   border-radius: 0px;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
+	color:#FFF;
 	font-size:13px;
 	padding:11px 26.5px;
 	text-decoration:none;
@@ -335,4 +331,75 @@ a {
   border:1px solid #06300A;
   color:#06300A;
   transition-duration: 0.5s;
+}
+
+.blok2 {
+  margin-left: 0%;
+  margin-top: 0%;
+  width: 100%;
+  height: 500px;
+  z-index: 2;
+  background-image: linear-gradient(90deg, #06300A, #103006));
+}
+
+.blok2 h1 {
+  font-family: HelveticaNeueMedium;
+  line-height: 5px;
+  font-size: 25px;
+  text-align: center;
+}
+
+.blok2 p {
+  font-family: HelveticaNeueLight;
+  font-size: 16px;
+  color: #2a2a2a;
+  text-align: center;
+}
+
+.viewproducts2 {
+  background-color:#FDC614;
+  font-family: HelveticaNeueLight;
+  letter-spacing: 1.5px;
+	border:1px solid #FDC614;
+  border-radius: 6px;
+	display:inline-block;
+	cursor:pointer;
+	color: #3a3a3a;
+	font-size:13px;
+	padding:11px 26.5px;
+	text-decoration: none;
+  margin-left: 29.5%;
+  margin-top: -85%;
+}
+
+.viewproducts2:hover {
+  background-color:#ffffff;
+  border:1px solid #FDC614;
+  color:#FDC614;
+  transition-duration: 0.5s;
+}
+
+.blok3 {
+
+}
+
+.blok3 h1 {
+  font-family: HelveticaNeueMedium;
+  line-height: 5px;
+  font-size: 25px;
+  text-align: center;
+}
+
+.blok3 p {
+  font-family: HelveticaNeueLight;
+  font-size: 16px;
+  color: #2a2a2a;
+  text-align: center;
+}
+
+.blok3 iframe {
+  margin-left: -79.5%;
+  border-style: solid;
+  border-width: 3.5px;
+  border-color: #FDC614;
 }
