--- a/style.css
+++ b/style.css
@@ -42,13 +42,11 @@ header a {
 .top ul li {
   list-style: none;
   display: inline-block;
-  float: center;
   line-height: 16px;
   text-align: center;
 }
 
 .top ul li a {
-  align: center;
   text-decoration: none;
   font-size: 16px;
   font-family: HelveticaNeueBold;
@@ -77,7 +75,6 @@ header a {
 }
 
 .menu ul li a {
-  align:"center";
   text-decoration: none;
   font-size: 14px;
   font-family: HelveticaNeueBold;
@@ -91,7 +88,7 @@ header a {
 }
 
 .menu ul li a:checked {
-  color: black;
+  color: #000;
 }
 
 .menu-wrap {
@@ -131,7 +128,7 @@ header a {
   flex: none;
   width: 50%;
   height: 0px;
-  background: black;
+  background: #000;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -244,8 +241,6 @@ header a {
   height: 600px;
   position: relative;
   transition: left 1s;
-  -webkit-transition: left 1s; /* Dit is voor Google Chrome */
-  -moz-transition: left 1s; /* Dit is voor Firefox */
 }
 
 .slider-image {
@@ -280,16 +275,11 @@ header a {
   left: -500px;
 }
 
-#slider-image-3:target ~ .image-container {
-  left: -1000px;
-}
-
 .blok1 {
   margin-left: -50%;
   margin-top: -90%;
   width: 500px;
   height: 500px;
-  z-index: 2;
 }
 
 .blok1 h1 {
@@ -302,13 +292,14 @@ header a {
   font-family: HelveticaNeueMedium;
   font-size: 16px;
   color: #2a2a2a;
+  font-weight: 400;
 }
 
 .viewproducts {
-  background-color:#06300A;
+  background-color: #06300A;
   font-family: HelveticaNeueLight;
   letter-spacing: 1.5px;
-	border:1px solid #06300A;
+	border:1px solid;
   border-radius: 0px;
 	display:inline-block;
 	cursor:pointer;
@@ -316,8 +307,8 @@ header a {
 	font-size:13px;
 	padding:11px 26.5px;
 	text-decoration:none;
-  margin-left: -50%;
-  margin-top: -80%;
+  margin-left: 0%;
+  margin-top: 1.5%;
 }
 
 .viewproducts:hover {
@@ -327,34 +318,77 @@ header a {
   transition-duration: 0.5s;
 }
 
-.blok2 {
-  margin-left: 0%;
-  margin-top: 0%;
+.over {
+  margin-left: 50%;
+  margin-top: 10%;
   width: 100%;
   height: 500px;
-  z-index: 2;
-  background-image: linear-gradient(90deg, #06300A, #103006));
 }
 
-.blok2 h1 {
+.over h1 {
+  font-family: HelveticaNeueMedium;
+  line-height: 5px;
+  font-size: 25px;
+  text-align: right;
+}
+
+.over p {
+  font-family: HelveticaNeueLight;
+  font-size: 16px;
+  color: #2a2a2a;
+  text-align: right;
+}
+
+.video {
+  margin-left: -50%;
+  margin-top: -40%;
+}
+
+.over2 {
+  margin-left: -50%;
+  margin-top: 25%;
+  width: 100%;
+  height: 500px;
+}
+
+.over2 p {
+  font-family: HelveticaNeueLight;
+  font-size: 16px;
+  color: #2a2a2a;
+  text-align: left;
+}
+
+.ontbijt {
+  margin-left: 45%;
+  margin-top: -70%;
+  width: 100%;
+  height: 500px;
+}
+
+.ontbijt h1 {
   font-family: HelveticaNeueMedium;
   line-height: 5px;
   font-size: 25px;
   text-align: center;
 }
 
-.blok2 p {
+.ontbijt p {
   font-family: HelveticaNeueLight;
   font-size: 16px;
   color: #2a2a2a;
   text-align: center;
 }
 
+.ontbijtfoto {
+  margin-left: -50%;
+  margin-top: -35%;
+  border-radius: 12px;
+}
+
 .viewproducts2 {
   background-color:#FDC614;
   font-family: HelveticaNeueLight;
   letter-spacing: 1.5px;
-	border:1px solid #FDC614;
   border-radius: 6px;
 	display:inline-block;
 	cursor:pointer;
@@ -362,38 +396,105 @@ header a {
 	font-size:13px;
 	padding:11px 26.5px;
 	text-decoration: none;
-  margin-left: 29.5%;
-  margin-top: -85%;
+  margin-left: 0%;
+  margin-top: 2.5%;
 }
 
 .viewproducts2:hover {
-  background-color:#ffffff;
+  background-color:transparent;
   border:1px solid #FDC614;
   color:#FDC614;
   transition-duration: 0.5s;
 }
 
-.blok3 {
-
+.app {
+  margin-left: -50%;
+  margin-top: 0%;
+  width: 100%;
+  height: 500px;
 }
 
-.blok3 h1 {
+.app h1 {
+  font-family: HelveticaNeueMedium;
+  line-height: 5px;
+  font-size: 25px;
+  text-align: left;
+}
+
+.app p {
+  font-family: HelveticaNeueLight;
+  font-size: 16px;
+  color: #2a2a2a;
+  text-align: left;
+}
+
+.appfoto {
+  margin-left: 120%;
+  margin-top: -60%;
+  text-align: right;
+  border-radius: 12px;
+}
+
+.ios {
+  margin-top: 0%;
+  margin-left: -5%;
+}
+
+.ios:hover {
+  transform: scale(1.1);
+  transition-duration: 0.75s;
+}
+
+.android {
+  margin-left: -35%;
+  margin-top: 3%;
+  z-index: 5;
+}
+
+.android:hover {
+  transform: scale(1.1);
+  transition-duration: 0.75s;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+  flex: 33.33%;
+}
+
+.row {
+  display: flex;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.locatie {
+  margin-top: -15%;
+}
+
+.locatie h1 {
   font-family: HelveticaNeueMedium;
   line-height: 5px;
   font-size: 25px;
   text-align: center;
 }
 
-.blok3 p {
+.locatie p {
   font-family: HelveticaNeueLight;
   font-size: 16px;
   color: #2a2a2a;
   text-align: center;
 }
 
-.blok3 iframe {
-  margin-left: -79.5%;
+.locatie iframe {
+  margin-left: -50%;
   border-style: solid;
   border-width: 3.5px;
   border-color: #FDC614;
+  border-radius: 12px;
 }
